force-app/main/default/objects/Log__c/fields/EmailLogFailedTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EmailLogFailedTimestamp__c</fullName>
    <description>DateTime when email log failed to send.</description>
    <label>Email Log Failed Timestamp</label>
    <type>DateTime</type>
</CustomField>