force-app/main/default/objects/Log__c/fields/EmailLogSent__c.field-meta.xml
<CustomField>
    <fullName>EmailLogSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether log was sent via email.</description>
    <label>Email Log Sent</label>
    <type>Checkbox</type>
</CustomField>