force-app/main/default/objects/Log__c/fields/EmailLogSentTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EmailLogSentTimestamp__c</fullName>
    <description>Indicates when email log was sent.</description>
    <label>Email Log Sent Timestamp</label>
    <type>DateTime</type>
</CustomField>