force-app/main/default/objects/Log__c/listViews/AllLogsSentViaEmail.listView-meta.xml
<ListView>
    <fullName>AllLogsSentViaEmail</fullName>
    <columns>NAME</columns>
    <columns>LoggedByUsernameLink__c</columns>
    <columns>TransactionId__c</columns>
    <columns>TotalLimitsCpuTimeUsed__c</columns>
    <columns>TotalLogEntries__c</columns>
    <columns>TotalERRORLogEntries__c</columns>
    <columns>TotalWARNLogEntries__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Scenario__c</columns>
    <columns>StartTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EmailLogSent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Logs Sent Via Email</label>
</ListView>